  this and providing fixes for it.


All (GUI):

- Fix wxInfoBar close button size in high DPI (Stefan Ziegler).
- Make disabling the window before creating it actually work.
- Implement wxAuiNotebook::GetBestSize() (Sebastian Walderich).
- Allow changing tooltip text for button allowing to enter a new string
  in wxPGArrayEditorDialog.


3.1.2: (released 2018-12-10)
----------------------------

All:

- Add wxLZMA{Input,Output}Stream classes using external liblzma.
- Make wxList and wxVector iterators conform to input iterator requirements.
- Fix MT-safety problem when reading and writing from wxSocket (jkubalik).
- Fix build issues under HaikuOS (mill-j).
- Fix problem with wx-config installation and use under NetBSD (wiz).
- Avoid spurious errors on thread creation under NetBSD.
- Improve high DPI support in wxAui (Simon Rozman).
- Fix a bug with parsing time zones in wxDateTime::ParseFormat() (evileye).
- Update all 3rd party libraries to their latest versions (Maarten Bent).

All (GUI):

- wxAdvanced library was merged into wxCore, simply remove all references
  to "adv" from your build system, it is not needed any longer.
- Add support for non-integer font sizes (e.g. 10.5pt fonts).
- Add support for font weights in 1..1000 interval and not just light/bold.
- Add wxDataViewToggleRenderer::ShowAsRadio().
- Improve stock items consistency and aesthetics (dhowland).
- Fix bug with missing items in overflowing AUI toolbar (Maarten Bent).
- Revert to left-aligning wxSpinCtrl contents by default.
- Make wxRibbonButtonBar buttons more customizable (Max Maisel).
- Add wxHtmlEasyPrinting::SetPromptMode() (pavel-t).
- Fix possible infinite loop in wxHtmlWindow layout (trivia21).
- Add "hint" property support to XRC for wxComboBox and wxSearchCtrl.
- Add support for style="page-break-inside:avoid" to <div> in wxHTML.
- Support strike-through in wxDataViewItem attributes (approach, Igor Korot).
- Allow distinguishing between user- and script-opened windows in wxWebView.